--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,23 @@
 group 'IceAndFire'
 version '1.0-SNAPSHOT'
 
+        buildscript {
+            repositories {
+                mavenCentral()
+            }
+            dependencies {
+                classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.4.RELEASE")
+            }
+        }
+
 apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+
+jar {
+    baseName = 'gs-spring-boot-docker'
+    version =  '0.1.0'
+}
 
 jar {
     manifest {
@@ -9,13 +25,14 @@ jar {
     }
 }
 
-sourceCompatibility = 1.8
-
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
+dependencies {
+    compile("org.springframework.boot:spring-boot-starter-web")
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+}
