--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,42 @@
-group 'IceAndFire'
-version '1.0-SNAPSHOT'
-
-        buildscript {
-            repositories {
-                mavenCentral()
-            }
-            dependencies {
-                classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.4.RELEASE")
-            }
-        }
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath('org.springframework.boot:spring-boot-gradle-plugin:1.5.7.RELEASE')
+// tag::build[]
+        classpath('se.transmode.gradle:gradle-docker:1.2')
+// end::build[]
+    }
+}
 
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
+// tag::plugin[]
+apply plugin: 'docker'
+// end::plugin[]
+
+// This is used as the docker image prefix (org)
+group = 'springio'
 
 jar {
     baseName = 'gs-spring-boot-docker'
     version =  '0.1.0'
 }
 
-jar {
-    manifest {
-        attributes 'Main-Class': 'se.skogsbrynet.iceandfire.IceAndFireMain'
+// tag::task[]
+task buildDocker(type: Docker, dependsOn: build) {
+    applicationName = jar.baseName
+    dockerfile = file('Dockerfile')
+    doFirst {
+        copy {
+            from jar
+            into "${stageDir}/target"
+        }
     }
 }
+// end::task[]
 
 repositories {
     mavenCentral()
@@ -36,3 +49,4 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
+
