--- a/build.gradle
+++ b/build.gradle
@@ -4,39 +4,19 @@ buildscript {
     }
     dependencies {
         classpath('org.springframework.boot:spring-boot-gradle-plugin:1.5.7.RELEASE')
-// tag::build[]
-        classpath('se.transmode.gradle:gradle-docker:1.2')
-// end::build[]
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
-// tag::plugin[]
-apply plugin: 'docker'
-// end::plugin[]
 
-// This is used as the docker image prefix (org)
-group = 'springio'
 
 jar {
-    baseName = 'gs-spring-boot-docker'
+    baseName = 'ice-and-fire-spring-boot'
     version =  '0.1.0'
 }
 
-// tag::task[]
-task buildDocker(type: Docker, dependsOn: build) {
-    applicationName = jar.baseName
-    dockerfile = file('Dockerfile')
-    doFirst {
-        copy {
-            from jar
-            into "${stageDir}/target"
-        }
-    }
-}
-// end::task[]
 
 repositories {
     mavenCentral()
